backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      deployment: hello
      # app: deployment1     
  replicas: 1
  template:
    metadata:
      labels:
        deployment: hello
        # app: deployment1
    spec:
      containers:
        - name: hello
          image: "gcr.io/google-samples/hello-go-gke:1.0"
          ports:
            - name: http
              containerPort: 80
