backend-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    deployment: hello
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
