backend-service2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello2
spec:
  selector:
    app: hello2
    tier: backend2
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
