ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:   
  name: example-ingress1  
spec:  
  ingressClassName: nginx
  rules:   
    - host: hello-world.info   
      http:   
        paths:  
          - path: /
            pathType: Prefix   
            backend:   
              service:   
                name: hello   
                port:   
                  number: 80
