ingress1.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:   
  name: example-ingress1  
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:  
  ingressClassName: nginx
  rules:   
    - host: hello-world.info   
      http:   
        paths:  
          - path: /
            pathType: Prefix   
            backend:   
              service:   
                name: hello2   
                port:   
                  number: 80
